brincando de criar curriculo

--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/style.css">
-  <title>Aula desenvolvimento web</title>
+  <title>Primeira página de HTML</title>
 </head>
 
 <body>
-  <h1>desenvolvimento web 1</h1>
+  <h1>Curriculo de Ramon Godinho</h1>
+  <h2>Dados pessoais:</h2>
+  <p><strong>Endereço: </strong>R. das Andorinhas, 465 Jd. Buru</p>
+  <p><strong>Telefone: </strong>(11)948331717</p>
+  <p><strong>LinkedIn: <a href="https://www.linkedin.com/in/ramon-godinho/">perfil</a> </strong></p>
+  <p><strong>E-mail:</strong> ramongodinho01@gmail.com</p>
+  <img src="/ff419652d0f2a6764a6a44ae7f9b7c88.jpg" alt="foto de perfil do candidato.">
+
+
+
 
 </body>
 
