--- a/index.html
+++ b/index.html
@@ -4,22 +4,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="css/main.css">
   <title>Primeira página de HTML</title>
 </head>
 
 <body>
-  <h1>Curriculo de Ramon Godinho</h1>
-  <h2>Dados pessoais:</h2>
-  <p><strong>Endereço: </strong>R. das Andorinhas, 465 Jd. Buru</p>
-  <p><strong>Telefone: </strong>(11)948331717</p>
-  <p><strong>LinkedIn: <a href="https://www.linkedin.com/in/ramon-godinho/">perfil</a> </strong></p>
-  <p><strong>E-mail:</strong> ramongodinho01@gmail.com</p>
-  <img src="/ff419652d0f2a6764a6a44ae7f9b7c88.jpg" alt="foto de perfil do candidato.">
-
-
-
-
+  <div id="main">
+    <h1>Curriculo de Ramon Godinho</h1>
+    <div id="dados-pessoais">
+      <h2>Dados pessoais:</h2>
+      <p><strong>Endereço: </strong>R. das Andorinhas, 465 Jd. Buru</p>
+      <p><strong>Telefone: </strong>(11)948331717</p>
+      <p><strong>LinkedIn: <a href="https://www.linkedin.com/in/ramon-godinho/">perfil</a> </strong></p>
+      <p><strong>E-mail:</strong> ramongodinho01@gmail.com</p>
+    </div>
+    <div id="foto">
+      <img src="images/ff419652d0f2a6764a6a44ae7f9b7c88.jpg" alt="foto de perfil do candidato.">
+    </div>
+    <div id="dados-academicos">
+      <h2>Formação Academica</h2>
+      <h3 class="subform">Curso Superior em Desenvolvimento de software multiplatforma</h3>
+      <p>Fatec Indiatuba - 2024 (cursando)</p>
+      <h3 class="subform">Curso Tecnico em Desenvolvimento de Sistemas</h3>
+      <p>FIEC - 2023</p>
+    </div>
+    <div id="experiencias">
+      <h2>Experiencias Profisionais</h2>
+      <h3>web designer</h3>
+      <p>Dinoco - desde 2007</p>
+      <p><small>Atuação no desenvolvimento dos portais da empresa utilizando HTML, CSS, Javasript. </small></p>
+    </div>
+    <div id="info-complementar">
+      <h2>Informações complementares</h2>
+      <p>
+      <ul id="lista">
+        <li>Ingles Avnaçado</li>
+        <li>Curso de Python - 40 horas - Udemy</li>
+      </ul>
+      </p>
+    </div>
+  </div>
 </body>
 
 </html>
