--- a/index.html
+++ b/index.html
@@ -4,46 +4,156 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/main.css">
-  <title>Primeira página de HTML</title>
+  <title>McQueen - Desenvolvedor Júnior</title>
+  <meta name="description" content="Desenvolvedor Front End Júnior Localizado em Radiator Springs - condado Carburador">
+  <link rel="stylesheet" href="./css/style.min.css">
 </head>
 
 <body>
-  <div id="main">
-    <h1>Curriculo de Ramon Godinho</h1>
-    <div id="dados-pessoais">
-      <h2>Dados pessoais:</h2>
-      <p><strong>Endereço: </strong>R. das Andorinhas, 465 Jd. Buru</p>
-      <p><strong>Telefone: </strong>(11)948331717</p>
-      <p><strong>LinkedIn: <a href="https://www.linkedin.com/in/ramon-godinho/">perfil</a> </strong></p>
-      <p><strong>E-mail:</strong> ramongodinho01@gmail.com</p>
-    </div>
-    <div id="foto">
-      <img src="images/ff419652d0f2a6764a6a44ae7f9b7c88.jpg" alt="foto de perfil do candidato.">
-    </div>
-    <div id="dados-academicos">
-      <h2>Formação Academica</h2>
-      <h3 class="subform">Curso Superior em Desenvolvimento de software multiplatforma</h3>
-      <p>Fatec Indiatuba - 2024 (cursando)</p>
-      <h3 class="subform">Curso Tecnico em Desenvolvimento de Sistemas</h3>
-      <p>FIEC - 2023</p>
-    </div>
-    <div id="experiencias">
-      <h2>Experiencias Profisionais</h2>
-      <h3>web designer</h3>
-      <p>Dinoco - desde 2007</p>
-      <p><small>Atuação no desenvolvimento dos portais da empresa utilizando HTML, CSS, Javasript. </small></p>
-    </div>
-    <div id="info-complementar">
-      <h2>Informações complementares</h2>
-      <p>
-      <ul id="lista">
-        <li>Ingles Avnaçado</li>
-        <li>Curso de Python - 40 horas - Udemy</li>
+  <header class="header">
+    <h1>RELÂMPAGO MARQUINHOS</h1>
+    <nav>
+      <ul class="header-menu">
+        <li><a href="#experiencia">Experiência</a></li>
+        <li><a href="#formacao">Formação</a></li>
+        <li><a href="#contato">Contato</a></li>
       </ul>
-      </p>
+    </nav>
+  </header>
+
+  <main class="introducao">
+    <img src="./img/perfil.png" alt="RELÂMPAGO" width="360" height="520">
+    <div>
+      <h1>Desenvolvedor<br>Front End <br>Júnior
+        <h2>com SETE copas pistão 🏆</h2><br>
+      </h1>
+      <p>Localizado em Radiator Springs - condado Carburador 🌎⛽</p>
     </div>
-  </div>
+  </main>
+
+  <section class="experiencia" id="experiencia" aria-label="Experiência">
+    <h2 class="subtitulo">Experiência</h2>
+    <div>
+      <p class="experiencia-texto">Desenvolvo pequenos projetos para web utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong> e suas frameworks. Também desenvolvo aplicações orientada a embarcados como a FuelTech - Gestão de Combustivel - utilizando <strong>Python</strong> e <strong>Inteligencia Artificial</strong>, <a href="https://github.com/Ramonlegend" target="_blank">conheça o meu GitHub.</a></p>
+
+      <div class="empresa">
+        <span class="empresa-ano">2006</span>
+        <h3 class="empresa-titulo">Dinoco</h3>
+        <span class="empresa-titulo">Desenvolvedor Júnior</span>
+        <p class="empresa-texto">No projeto, Dinoco - Gestão de Combustivel, eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei contribuí no Design.</p>
+        <ul class="empresa-habilidades">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>UX Design</li>
+          <li>UI Design</li>
+        </ul>
+      </div>
+
+      <div class="empresa">
+        <span class="empresa-ano">2011</span>
+        <h3 class="empresa-titulo">Rust Eze - Bumper Ointment</h3>
+        <span class="empresa-titulo">Desenvolvedor Júnior FullStack</span>
+        <p class="empresa-texto">Rust Eze é uma empresa que produz lubrificantes de motor. Fui responsavel por codar o site deles com o inicio da virtualização das lojas. O projeto foi feito com HTML, CSS, React.js, VITE e Node.js. Todo o projeto foi feito do zero incluindo as APIs.</p>
+        <ul class="empresa-habilidades">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>React.js</li>
+          <li>VITE</li>
+          <li>Node.js</li>
+          <li>MongoDB</li>
+          <li>Digital Ocean</li>
+          <li>ChatGPT 4.0</li>
+        </ul>
+      </div>
+
+      <div class="empresa">
+        <span class="empresa-ano">2017</span>
+        <h3 class="empresa-titulo">Pneus Della Luigi</h3>
+        <span class="empresa-titulo">Desenvolvedor Sênior FullStack</span>
+        <p class="empresa-texto">Projeto realizado para a implementação web de uma loja de venda e reparação de pneus. Eu trabalhei no suporte em front e back end do site, contruibui com toda a parte de design e até trafego pago!</p>
+        <ul class="empresa-habilidades">
+          <li>React.js</li>
+          <li>MySQL</li>
+          <li>HTML5</li>
+          <li>CSS3</li>
+          <li>UI Design</li>
+          <li>UX Design</li>
+          <li>Firebase</li>
+          <li>Digital Ocean</li>
+          <li>Nuvem AWS</li>
+          <li>Python</li>
+          <li>Figma</li>
+          <li>ChatGPT 7.7</li>
+          <li>Vozes da minha cabeça</li>
+        </ul>
+      </div>
+
+    </div>
+  </section>
+
+  <section class="formacao" id="formacao" aria-label="Formação">
+    <div class="formacao-container">
+      <h2 class="subtitulo">Formação</h2>
+
+      <div>
+        <p class="formacao-texto">
+          Estou cursando <strong>Desenvolvimento de Software em Multiplataforma</strong> 🎓. Além disso me mantenho sempre atualizado com <strong>cursos intensivos online</strong>.
+        </p>
+
+        <ul class="faculdade-lista">
+          <li class="faculdade">
+            <span class="faculdade-tipo">Tecnólogo</span>
+            <h3 class="faculdade-curso">Desenvolvimento de Software em Multiplataforma</h3>
+            <span class="faculdade-instituicao">Fatec - Archimedes Lammoglia</span>
+          </li>
+          <li class="faculdade">
+            <span class="faculdade-tipo">Certificado</span>
+            <h3 class="faculdade-curso">JavaScript ES6 Completo</h3>
+            <span class="faculdade-instituicao">Origamid</span>
+          </li>
+          <li class="faculdade">
+            <span class="faculdade-tipo">Certificado</span>
+            <h3 class="faculdade-curso">React.js Completo</h3>
+            <span class="faculdade-instituicao">Origamid</span>
+          </li>
+        </ul>
+
+        <div class="formacao-extra">
+          <div class="cursos">
+            <h3>Cursos Intensivos</h3>
+            <ul>
+              <li>Front End para Iniciantes <span>72h</span></li>
+              <li>JavaScript ES6 <span>37h</span></li>
+              <li>ReactJS <span>18h</span></li>
+              <li>WordPress <span>6h</span></li>
+            </ul>
+          </div>
+          <div class="idiomas">
+            <h3>Idiomas</h3>
+            <ul>
+              <li>Inglês 🇺🇸 <span>/ Intermediário</span></li>
+              <li>Italiano 🇮🇹 <span>/ Intermediário</span></li>
+              <li>Carrocês 🇦🇫 <span>/ Fluente</span></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer" id="contato">
+    <div class="footer-container">
+      <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa 👋</p>
+      <ul class="footer-contato">
+        <li>marquinhosdev1337@gmail.com</li>
+        <li>+99 9 99999999</li>
+        <li><a href="https://www.instagram.com/ramoon.god/">@McQueen.dev</a></li>
+      </ul>
+      <p class="footer-copy">RELÂMPAGO MARQUINHOS. Desenvolvedor FullStack.</p>
+    </div>
+  </footer>
+
 </body>
 
 </html>
