--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>McQueen - Desenvolvedor Júnior</title>
+  <title>McQueen - Desenvolvedor FullStack</title>
   <meta name="description" content="Desenvolvedor Front End Júnior Localizado em Radiator Springs - condado Carburador">
   <link rel="stylesheet" href="./css/style.min.css">
 </head>
@@ -24,7 +24,7 @@
   <main class="introducao">
     <img src="./img/perfil.png" alt="RELÂMPAGO" width="360" height="520">
     <div>
-      <h1>Desenvolvedor<br>Front End <br>Júnior
+      <h1>Desenvolvedor<br>FullStack<br>
         <h2>com SETE copas pistão 🏆</h2><br>
       </h1>
       <p>Localizado em Radiator Springs - condado Carburador 🌎⛽</p>
